Report - mark correct answer

--- a/sass/_quiz_report.scss
+++ b/sass/_quiz_report.scss
@@ -56,7 +56,9 @@
 
     }
     &-answer{
-        color: $right--contrast;
+        &--right{
+            color: $right--contrast;
+        }
     }
     &-reference{
         font-size: 0.7rem;
