Report - mark wrong answer

--- a/sass/_quiz_report.scss
+++ b/sass/_quiz_report.scss
@@ -59,6 +59,9 @@
         &--right{
             color: $right--contrast;
         }
+        &--wrong{
+            color: $wrong--contrast;
+        }
     }
     &-reference{
         font-size: 0.7rem;
