--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -3,7 +3,7 @@
     padding: 0.8em 2em;
     cursor: pointer;
     border-radius: 0.2em;
-    border:none;
+    border: 1px solid rgb(221,221,221);
     font-family: inherit;
     background-color: rgb(221,221,221);
     transition: background-color 200ms ease-in-out,
@@ -13,32 +13,29 @@
 
     &:disabled{
         cursor: default;
+        background-color: transparent;
+        border:1px solid rgb(221,221,221);
     }
 
-    &:hover{
+    &:hover:not([disabled]){
         background-color: rgb(227,227,227);
     }
 
-    &--clear{
-        background-color: transparent;
-        border:1px solid rgb(221,221,221);
-        
-        &:hover:not(:disabled){
-            background-color: rgb(245,245,245);
-        }
-    }
     &--large{
         font-size: 1.1rem;
     }
+
     &--link{
+        border: none;
         background-color: transparent;
         color: inherit;
-        &:hover{
+        &:hover:not([disabled]){
             background-color: transparent;
             color: #fff;
         }
         &:disabled{
             color: #aaa;
+            border:none;
         }
     }
 }
