--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -16,16 +16,16 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 0;
-        height: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
         opacity: 0;
         background-color: #000;
         transition: opacity 400ms ease-in-out;
 
         &--show{
             opacity: 0.3;
-            width: 100%;
-            height: 100%;
+            pointer-events: auto;
         }
     }
 
