Edit - add modal to init htmls elements

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -3,8 +3,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 0;
-    height: 0;
+    width: 50%;
+    height: 50%;
+    pointer-events: none;
     opacity: 0;
     padding: 2em 2em 2em 0.5em;
     background-color: $background;
@@ -30,7 +31,6 @@
 
     &--show{
         opacity: 1;
-        width: 50%;
-        height: 50%;
+        pointer-events: auto;
     }
 }
