--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -1,15 +1,26 @@
 .modal{
-    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
-    width: 50%;
-    height: 50%;
-    pointer-events: none;
-    opacity: 0;
-    padding: 2em 2em 2em 0.5em;
-    background-color: $background;
-    transition: opacity 400ms ease-in-out;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &-content{
+        z-index: 2;
+        pointer-events: none;
+        opacity: 0;
+        padding: 2em 2em 2em 0.5em;
+        background-color: $background;
+        transition: opacity 400ms ease-in-out;
+
+        &--show{
+            opacity: 1;
+            pointer-events: auto;
+        }
+    }
 
     &-overlay{
         z-index: 1;
@@ -27,10 +38,5 @@
             opacity: 0.3;
             pointer-events: auto;
         }
-    }
-
-    &--show{
-        opacity: 1;
-        pointer-events: auto;
     }
 }
