--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -7,18 +7,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.9rem;
 
     &-content{
         z-index: 2;
         pointer-events: none;
         opacity: 0;
-        padding: 2em 2em 2em 0.5em;
+        padding: 2em;
         background-color: $background;
         transition: opacity 400ms ease-in-out;
 
         &--show{
             opacity: 1;
             pointer-events: auto;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
         }
     }
 
