--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -8,6 +8,8 @@
     align-items: center;
     justify-content: center;
     font-size: 0.9rem;
+    pointer-events: none;
+    z-index: 3;
 
     &-content{
         z-index: 2;
