--- a/sass/_quiz_report.scss
+++ b/sass/_quiz_report.scss
@@ -1,5 +1,9 @@
 .quiz__report{
 
+    &-right, &-wrong{
+        font-size: 0.8rem;
+        margin-left: 1em;
+    }
     &-right{
         color: $right--contrast;
     }
