Add - render and style controls

--- a/sass/_quiz_report.scss
+++ b/sass/_quiz_report.scss
@@ -21,6 +21,14 @@
         }
     }
 
+    &-filter{
+        font-size: 0.8rem;
+        text-align: center;
+        > label{
+            padding:1em;
+        }
+    }
+
     &-question{
         background-color: #fdfdfd;
         position: relative;
