Add - render ans style controls

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -33,6 +33,14 @@
         transform: translateX(0);
     }
 
+    &-filter{
+        font-size: 0.8rem;
+        text-align: center;
+        > label{
+            padding:1em;
+        }
+    }
+
     & ul{
         list-style: none;
         padding-left: 50px;
