Add - refine reports

--- a/sass/_general_report.scss
+++ b/sass/_general_report.scss
@@ -1,5 +1,5 @@
 .general__report{
-    &-right, &-wrong{
+    &-right, &-wrong, &--secondary {
         font-size: 0.8rem;
         margin-left: 1em;
     }
