--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,111 +1,108 @@
-.index{
-    z-index: 2;
+.index {
+  z-index: 2;
+  position: fixed;
+  top: 37px;
+  bottom: 0px;
+  left: 0;
+  padding: 2em 2em 2em 0.5em;
+  transform: translateX(-100%);
+  overflow: scroll;
+  width: 40em;
+  background-color: $background;
+  transition: transform 400ms ease-in-out;
+
+  &-overlay {
+    z-index: 1;
     position: fixed;
-    top: 37px;
-    bottom: 0px;
+    top: 0;
     left: 0;
-    padding: 2em 2em 2em 0.5em;
-    transform: translateX(-100%);
-    overflow: scroll;
-    width: 40em;
-    background-color: $background;
-    transition: transform 400ms ease-in-out;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    opacity: 0;
+    background-color: #000;
+    transition: opacity 400ms ease-in-out;
 
-    &-overlay{
-        z-index: 1;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        opacity: 0;
-        background-color: #000;
-        transition: opacity 400ms ease-in-out;
+    &--show {
+      opacity: 0.3;
+      pointer-events: auto;
+    }
+  }
 
-        &--show{
-            opacity: 0.3;
-            pointer-events: auto;
-        }
+  &--show {
+    transform: translateX(0);
+  }
+
+  &-filter {
+    font-size: 0.8rem;
+    text-align: center;
+    > label {
+      padding: 1em;
+    }
+  }
+
+  & ul {
+    list-style: none;
+    padding-left: 50px;
+  }
+
+  &__question {
+    background-color: #fdfdfd;
+    position: relative;
+    padding: 1.2em 1.5em;
+    font-size: 0.8rem;
+    margin-bottom: 1em;
+    border-radius: 0.2em;
+    border: #fdfdfd solid 2px;
+    box-shadow: 0 0 0 1px $shadow;
+    cursor: pointer;
+    transition: border-color 300ms ease-in-out, box-shadow 200ms ease-in-out,
+      background-color 200ms ease-in-out;
+
+    &-index {
+      position: absolute;
+      left: -30px;
+      top: 15px;
+      margin: 0;
     }
 
-    &--show{
-        transform: translateX(0);
+    .mark {
+      position: absolute;
+      left: -45px;
+      top: 18px;
+      color: #ddd;
+    }
+    &--marked {
+      .mark {
+        color: $selected;
+      }
     }
 
-    &-filter{
-        font-size: 0.8rem;
-        text-align: center;
-        > label{
-            padding:1em;
-        }
+    &:hover {
+      box-shadow: 0 0 4px 1px $shadow--accent;
+      background-color: #fff;
     }
 
-    & ul{
-        list-style: none;
-        padding-left: 50px;
+    &--disabled {
+      cursor: default;
     }
 
-    &__question{
-        background-color: #fdfdfd;
-        position: relative;
-        counter-increment: steps2;
-        padding: 1.2em 1.5em;
-        font-size: 0.8rem;
-        margin-bottom: 1em;
-        border-radius: 0.2em;
-        border:#fdfdfd solid 2px;
-        box-shadow: 0 0 0 1px $shadow;
-        cursor: pointer;
-        transition: border-color 300ms ease-in-out,
-            box-shadow 200ms ease-in-out, 
-            background-color 200ms ease-in-out;
-        
-        &::before {
-            position: absolute;
-            left: -30px;
-            content: counter(steps2) ".";
-        }
-
-        .mark{
-            position: absolute;
-            left: -45px;
-            top: 18px;
-            color: #ddd;
-        }
-        &--marked{
-            .mark{
-                color: $selected;
-            }
-        }
-
-        &:hover {
-            box-shadow: 0 0 4px 1px $shadow--accent;
-            background-color: #fff;
-        }
-
-        &--disabled {
-            cursor: default;
-        }
-
-        &--current{
-            border-color: #fffdf1;
-            background-color: #fffdf1;
-            &:hover {
-                background-color: #fffdf1;
-            }
-        }
-
-        &--answered{
-            border-color: $answered;
-        }
-        &--wrong{
-            border-color: $wrong;
-        }
-        &--right{
-            border-color: $right;
-        }
-
+    &--current {
+      border-color: #fffdf1;
+      background-color: #fffdf1;
+      &:hover {
+        background-color: #fffdf1;
+      }
     }
-    
+
+    &--answered {
+      border-color: $answered;
+    }
+    &--wrong {
+      border-color: $wrong;
+    }
+    &--right {
+      border-color: $right;
+    }
+  }
 }
